lib/concept_space/active_record_like/adapter/parser/find_conditions_sql_syntax.rb
module FindConditionsSqlSyntax
  include Treetop::Runtime

  def root
    @root || :sqlFindConditions
  end

  module SqlFindConditions0
    def sqlBoolOrExpression
      elements[1]
    end

  end

  module SqlFindConditions1
    def code; sqlBoolOrExpression.code; end
  end

  def _nt_sqlFindConditions
    start_index = index
    if node_cache[:sqlFindConditions].has_key?(index)
      cached = node_cache[:sqlFindConditions][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    s1, i1 = [], index
    loop do
      r2 = _nt_SP
      if r2
        s1 << r2
      else
        break
      end
    end
    r1 = SyntaxNode.new(input, i1...index, s1)
    s0 << r1
    if r1
      r3 = _nt_sqlBoolOrExpression
      s0 << r3
      if r3
        s4, i4 = [], index
        loop do
          r5 = _nt_SP
          if r5
            s4 << r5
          else
            break
          end
        end
        r4 = SyntaxNode.new(input, i4...index, s4)
        s0 << r4
      end
    end
    if s0.last
      r0 = (SyntaxNode).new(input, i0...index, s0)
      r0.extend(SqlFindConditions0)
      r0.extend(SqlFindConditions1)
    else
      self.index = i0
      r0 = nil
    end

    node_cache[:sqlFindConditions][start_index] = r0

    return r0
  end

  module SqlBoolOrExpression0
    def sqlBoolAndExpression
      elements[0]
    end

    def EOWSP
      elements[4]
    end

    def sqlBoolOrExpression
      elements[5]
    end
  end

  module SqlBoolOrExpression1
    	def code
    		build { sql_msg(this.sqlBoolAndExpression.code, 'or', this.sqlBoolOrExpression.code) }	
    	end
  end

  def _nt_sqlBoolOrExpression
    start_index = index
    if node_cache[:sqlBoolOrExpression].has_key?(index)
      cached = node_cache[:sqlBoolOrExpression][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0 = index
    i1, s1 = index, []
    r2 = _nt_sqlBoolAndExpression
    s1 << r2
    if r2
      s3, i3 = [], index
      loop do
        r4 = _nt_SP
        if r4
          s3 << r4
        else
          break
        end
      end
      r3 = SyntaxNode.new(input, i3...index, s3)
      s1 << r3
      if r3
        if input.index(Regexp.new('[oO]'), index) == index
          r5 = (SyntaxNode).new(input, index...(index + 1))
          @index += 1
        else
          r5 = nil
        end
        s1 << r5
        if r5
          if input.index(Regexp.new('[rR]'), index) == index
            r6 = (SyntaxNode).new(input, index...(index + 1))
            @index += 1
          else
            r6 = nil
          end
          s1 << r6
          if r6
            r7 = _nt_EOWSP
            s1 << r7
            if r7
              r8 = _nt_sqlBoolOrExpression
              s1 << r8
            end
          end
        end
      end
    end
    if s1.last
      r1 = (SyntaxNode).new(input, i1...index, s1)
      r1.extend(SqlBoolOrExpression0)
      r1.extend(SqlBoolOrExpression1)
    else
      self.index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      r9 = _nt_sqlBoolAndExpression
      if r9
        r0 = r9
      else
        self.index = i0
        r0 = nil
      end
    end

    node_cache[:sqlBoolOrExpression][start_index] = r0

    return r0
  end

  module SqlBoolAndExpression0
    def sqlBoolNotExpression
      elements[0]
    end

    def EOWSP
      elements[5]
    end

    def sqlBoolAndExpression
      elements[6]
    end
  end

  module SqlBoolAndExpression1
    	def code
    		build { sql_msg(this.sqlBoolNotExpression.code, 'and', this.sqlBoolAndExpression.code) }	
    	end
  end

  def _nt_sqlBoolAndExpression
    start_index = index
    if node_cache[:sqlBoolAndExpression].has_key?(index)
      cached = node_cache[:sqlBoolAndExpression][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0 = index
    i1, s1 = index, []
    r2 = _nt_sqlBoolNotExpression
    s1 << r2
    if r2
      s3, i3 = [], index
      loop do
        r4 = _nt_SP
        if r4
          s3 << r4
        else
          break
        end
      end
      r3 = SyntaxNode.new(input, i3...index, s3)
      s1 << r3
      if r3
        if input.index(Regexp.new('[aA]'), index) == index
          r5 = (SyntaxNode).new(input, index...(index + 1))
          @index += 1
        else
          r5 = nil
        end
        s1 << r5
        if r5
          if input.index(Regexp.new('[nN]'), index) == index
            r6 = (SyntaxNode).new(input, index...(index + 1))
            @index += 1
          else
            r6 = nil
          end
          s1 << r6
          if r6
            if input.index(Regexp.new('[dD]'), index) == index
              r7 = (SyntaxNode).new(input, index...(index + 1))
              @index += 1
            else
              r7 = nil
            end
            s1 << r7
            if r7
              r8 = _nt_EOWSP
              s1 << r8
              if r8
                r9 = _nt_sqlBoolAndExpression
                s1 << r9
              end
            end
          end
        end
      end
    end
    if s1.last
      r1 = (SyntaxNode).new(input, i1...index, s1)
      r1.extend(SqlBoolAndExpression0)
      r1.extend(SqlBoolAndExpression1)
    else
      self.index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      r10 = _nt_sqlBoolNotExpression
      if r10
        r0 = r10
      else
        self.index = i0
        r0 = nil
      end
    end

    node_cache[:sqlBoolAndExpression][start_index] = r0

    return r0
  end

  module SqlBoolNotExpression0
    def EOWSP
      elements[3]
    end

    def sqlBoolNotExpression
      elements[4]
    end
  end

  module SqlBoolNotExpression1
  		def code
  			build { sql_msg(this.sqlBoolNotExpression.code, 'not') }
  		end
  end

  def _nt_sqlBoolNotExpression
    start_index = index
    if node_cache[:sqlBoolNotExpression].has_key?(index)
      cached = node_cache[:sqlBoolNotExpression][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0 = index
    i1, s1 = index, []
    if input.index(Regexp.new('[nN]'), index) == index
      r2 = (SyntaxNode).new(input, index...(index + 1))
      @index += 1
    else
      r2 = nil
    end
    s1 << r2
    if r2
      if input.index(Regexp.new('[oO]'), index) == index
        r3 = (SyntaxNode).new(input, index...(index + 1))
        @index += 1
      else
        r3 = nil
      end
      s1 << r3
      if r3
        if input.index(Regexp.new('[tT]'), index) == index
          r4 = (SyntaxNode).new(input, index...(index + 1))
          @index += 1
        else
          r4 = nil
        end
        s1 << r4
        if r4
          r5 = _nt_EOWSP
          s1 << r5
          if r5
            r6 = _nt_sqlBoolNotExpression
            s1 << r6
          end
        end
      end
    end
    if s1.last
      r1 = (SyntaxNode).new(input, i1...index, s1)
      r1.extend(SqlBoolNotExpression0)
      r1.extend(SqlBoolNotExpression1)
    else
      self.index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      r7 = _nt_sqlBoolTruthExpression
      if r7
        r0 = r7
      else
        self.index = i0
        r0 = nil
      end
    end

    node_cache[:sqlBoolNotExpression][start_index] = r0

    return r0
  end

  module SqlBoolTruthExpression0
    def sqlBoolOrExpression
      elements[2]
    end

  end

  module SqlBoolTruthExpression1
    def code; sqlBoolOrExpression.code; end
  end

  def _nt_sqlBoolTruthExpression
    start_index = index
    if node_cache[:sqlBoolTruthExpression].has_key?(index)
      cached = node_cache[:sqlBoolTruthExpression][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0 = index
    i1, s1 = index, []
    if input.index('(', index) == index
      r2 = (SyntaxNode).new(input, index...(index + 1))
      @index += 1
    else
      terminal_parse_failure('(')
      r2 = nil
    end
    s1 << r2
    if r2
      s3, i3 = [], index
      loop do
        r4 = _nt_SP
        if r4
          s3 << r4
        else
          break
        end
      end
      r3 = SyntaxNode.new(input, i3...index, s3)
      s1 << r3
      if r3
        r5 = _nt_sqlBoolOrExpression
        s1 << r5
        if r5
          s6, i6 = [], index
          loop do
            r7 = _nt_SP
            if r7
              s6 << r7
            else
              break
            end
          end
          r6 = SyntaxNode.new(input, i6...index, s6)
          s1 << r6
          if r6
            if input.index(')', index) == index
              r8 = (SyntaxNode).new(input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure(')')
              r8 = nil
            end
            s1 << r8
          end
        end
      end
    end
    if s1.last
      r1 = (SyntaxNode).new(input, i1...index, s1)
      r1.extend(SqlBoolTruthExpression0)
      r1.extend(SqlBoolTruthExpression1)
    else
      self.index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      r9 = _nt_sqlBoolTestExpression
      if r9
        r0 = r9
      else
        self.index = i0
        r0 = nil
      end
    end

    node_cache[:sqlBoolTruthExpression][start_index] = r0

    return r0
  end

  def _nt_sqlBoolTestExpression
    start_index = index
    if node_cache[:sqlBoolTestExpression].has_key?(index)
      cached = node_cache[:sqlBoolTestExpression][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0 = index
    r1 = _nt_sqlBoolBetweenExpression
    if r1
      r0 = r1
    else
      r2 = _nt_sqlBoolNullExpression
      if r2
        r0 = r2
      else
        r3 = _nt_sqlBoolInExpression
        if r3
          r0 = r3
        else
          r4 = _nt_sqlBoolComparison
          if r4
            r0 = r4
          else
            self.index = i0
            r0 = nil
          end
        end
      end
    end

    node_cache[:sqlBoolTestExpression][start_index] = r0

    return r0
  end

  module SqlBoolNullExpression0
    def sqlRef
      elements[0]
    end

    def EOW
      elements[9]
    end
  end

  module SqlBoolNullExpression1
  		def code
  			build {sql_msg(this.sqlRef.code, 'is_null')}
  		end
  end

  module SqlBoolNullExpression2
    def sqlRef
      elements[0]
    end

    def EOW
      elements[13]
    end
  end

  module SqlBoolNullExpression3
  		def code
  			build {sql_msg(sql_msg(this.sqlRef.code, 'is_null'), 'not')}
  		end
  end

  def _nt_sqlBoolNullExpression
    start_index = index
    if node_cache[:sqlBoolNullExpression].has_key?(index)
      cached = node_cache[:sqlBoolNullExpression][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0 = index
    i1, s1 = index, []
    r2 = _nt_sqlRef
    s1 << r2
    if r2
      s3, i3 = [], index
      loop do
        r4 = _nt_SP
        if r4
          s3 << r4
        else
          break
        end
      end
      r3 = SyntaxNode.new(input, i3...index, s3)
      s1 << r3
      if r3
        if input.index(Regexp.new('[iI]'), index) == index
          r5 = (SyntaxNode).new(input, index...(index + 1))
          @index += 1
        else
          r5 = nil
        end
        s1 << r5
        if r5
          if input.index(Regexp.new('[sS]'), index) == index
            r6 = (SyntaxNode).new(input, index...(index + 1))
            @index += 1
          else
            r6 = nil
          end
          s1 << r6
          if r6
            s7, i7 = [], index
            loop do
              r8 = _nt_SP
              if r8
                s7 << r8
              else
                break
              end
            end
            if s7.empty?
              self.index = i7
              r7 = nil
            else
              r7 = SyntaxNode.new(input, i7...index, s7)
            end
            s1 << r7
            if r7
              if input.index(Regexp.new('[nN]'), index) == index
                r9 = (SyntaxNode).new(input, index...(index + 1))
                @index += 1
              else
                r9 = nil
              end
              s1 << r9
              if r9
                if input.index(Regexp.new('[uU]'), index) == index
                  r10 = (SyntaxNode).new(input, index...(index + 1))
                  @index += 1
                else
                  r10 = nil
                end
                s1 << r10
                if r10
                  if input.index(Regexp.new('[lL]'), index) == index
                    r11 = (SyntaxNode).new(input, index...(index + 1))
                    @index += 1
                  else
                    r11 = nil
                  end
                  s1 << r11
                  if r11
                    if input.index(Regexp.new('[lL]'), index) == index
                      r12 = (SyntaxNode).new(input, index...(index + 1))
                      @index += 1
                    else
                      r12 = nil
                    end
                    s1 << r12
                    if r12
                      r13 = _nt_EOW
                      s1 << r13
                    end
                  end
                end
              end
            end
          end
        end
      end
    end
    if s1.last
      r1 = (SyntaxNode).new(input, i1...index, s1)
      r1.extend(SqlBoolNullExpression0)
      r1.extend(SqlBoolNullExpression1)
    else
      self.index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      i14, s14 = index, []
      r15 = _nt_sqlRef
      s14 << r15
      if r15
        s16, i16 = [], index
        loop do
          r17 = _nt_SP
          if r17
            s16 << r17
          else
            break
          end
        end
        r16 = SyntaxNode.new(input, i16...index, s16)
        s14 << r16
        if r16
          if input.index(Regexp.new('[iI]'), index) == index
            r18 = (SyntaxNode).new(input, index...(index + 1))
            @index += 1
          else
            r18 = nil
          end
          s14 << r18
          if r18
            if input.index(Regexp.new('[sS]'), index) == index
              r19 = (SyntaxNode).new(input, index...(index + 1))
              @index += 1
            else
              r19 = nil
            end
            s14 << r19
            if r19
              s20, i20 = [], index
              loop do
                r21 = _nt_SP
                if r21
                  s20 << r21
                else
                  break
                end
              end
              if s20.empty?
                self.index = i20
                r20 = nil
              else
                r20 = SyntaxNode.new(input, i20...index, s20)
              end
              s14 << r20
              if r20
                if input.index(Regexp.new('[nN]'), index) == index
                  r22 = (SyntaxNode).new(input, index...(index + 1))
                  @index += 1
                else
                  r22 = nil
                end
                s14 << r22
                if r22
                  if input.index(Regexp.new('[oO]'), index) == index
                    r23 = (SyntaxNode).new(input, index...(index + 1))
                    @index += 1
                  else
                    r23 = nil
                  end
                  s14 << r23
                  if r23
                    if input.index(Regexp.new('[tT]'), index) == index
                      r24 = (SyntaxNode).new(input, index...(index + 1))
                      @index += 1
                    else
                      r24 = nil
                    end
                    s14 << r24
                    if r24
                      s25, i25 = [], index
                      loop do
                        r26 = _nt_SP
                        if r26
                          s25 << r26
                        else
                          break
                        end
                      end
                      if s25.empty?
                        self.index = i25
                        r25 = nil
                      else
                        r25 = SyntaxNode.new(input, i25...index, s25)
                      end
                      s14 << r25
                      if r25
                        if input.index(Regexp.new('[nN]'), index) == index
                          r27 = (SyntaxNode).new(input, index...(index + 1))
                          @index += 1
                        else
                          r27 = nil
                        end
                        s14 << r27
                        if r27
                          if input.index(Regexp.new('[uU]'), index) == index
                            r28 = (SyntaxNode).new(input, index...(index + 1))
                            @index += 1
                          else
                            r28 = nil
                          end
                          s14 << r28
                          if r28
                            if input.index(Regexp.new('[lL]'), index) == index
                              r29 = (SyntaxNode).new(input, index...(index + 1))
                              @index += 1
                            else
                              r29 = nil
                            end
                            s14 << r29
                            if r29
                              if input.index(Regexp.new('[lL]'), index) == index
                                r30 = (SyntaxNode).new(input, index...(index + 1))
                                @index += 1
                              else
                                r30 = nil
                              end
                              s14 << r30
                              if r30
                                r31 = _nt_EOW
                                s14 << r31
                              end
                            end
                          end
                        end
                      end
                    end
                  end
                end
              end
            end
          end
        end
      end
      if s14.last
        r14 = (SyntaxNode).new(input, i14...index, s14)
        r14.extend(SqlBoolNullExpression2)
        r14.extend(SqlBoolNullExpression3)
      else
        self.index = i14
        r14 = nil
      end
      if r14
        r0 = r14
      else
        self.index = i0
        r0 = nil
      end
    end

    node_cache[:sqlBoolNullExpression][start_index] = r0

    return r0
  end

  module SqlBoolInExpression0
    def sqlArithmetic
      elements[0]
    end

    def EOWSP
      elements[4]
    end

    def sqlRange
      elements[5]
    end
  end

  module SqlBoolInExpression1
  		def code
  			build {sql_msg(this.sqlArithmetic.code, 'in', this.sqlRange.code)}
  		end
  end

  module SqlBoolInExpression2
    def sqlArithmetic
      elements[0]
    end

    def EOWSP
      elements[8]
    end

    def sqlRange
      elements[9]
    end
  end

  module SqlBoolInExpression3
  		def code
  			build {sql_msg(sql_msg(this.sqlArithmetic.code, 'in', this.sqlRange.code), 'not')}
  		end
  end

  def _nt_sqlBoolInExpression
    start_index = index
    if node_cache[:sqlBoolInExpression].has_key?(index)
      cached = node_cache[:sqlBoolInExpression][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0 = index
    i1, s1 = index, []
    r2 = _nt_sqlArithmetic
    s1 << r2
    if r2
      s3, i3 = [], index
      loop do
        r4 = _nt_SP
        if r4
          s3 << r4
        else
          break
        end
      end
      r3 = SyntaxNode.new(input, i3...index, s3)
      s1 << r3
      if r3
        if input.index(Regexp.new('[iI]'), index) == index
          r5 = (SyntaxNode).new(input, index...(index + 1))
          @index += 1
        else
          r5 = nil
        end
        s1 << r5
        if r5
          if input.index(Regexp.new('[nN]'), index) == index
            r6 = (SyntaxNode).new(input, index...(index + 1))
            @index += 1
          else
            r6 = nil
          end
          s1 << r6
          if r6
            r7 = _nt_EOWSP
            s1 << r7
            if r7
              r8 = _nt_sqlRange
              s1 << r8
            end
          end
        end
      end
    end
    if s1.last
      r1 = (SyntaxNode).new(input, i1...index, s1)
      r1.extend(SqlBoolInExpression0)
      r1.extend(SqlBoolInExpression1)
    else
      self.index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      i9, s9 = index, []
      r10 = _nt_sqlArithmetic
      s9 << r10
      if r10
        s11, i11 = [], index
        loop do
          r12 = _nt_SP
          if r12
            s11 << r12
          else
            break
          end
        end
        r11 = SyntaxNode.new(input, i11...index, s11)
        s9 << r11
        if r11
          if input.index(Regexp.new('[nN]'), index) == index
            r13 = (SyntaxNode).new(input, index...(index + 1))
            @index += 1
          else
            r13 = nil
          end
          s9 << r13
          if r13
            if input.index(Regexp.new('[oO]'), index) == index
              r14 = (SyntaxNode).new(input, index...(index + 1))
              @index += 1
            else
              r14 = nil
            end
            s9 << r14
            if r14
              if input.index(Regexp.new('[tT]'), index) == index
                r15 = (SyntaxNode).new(input, index...(index + 1))
                @index += 1
              else
                r15 = nil
              end
              s9 << r15
              if r15
                s16, i16 = [], index
                loop do
                  r17 = _nt_SP
                  if r17
                    s16 << r17
                  else
                    break
                  end
                end
                if s16.empty?
                  self.index = i16
                  r16 = nil
                else
                  r16 = SyntaxNode.new(input, i16...index, s16)
                end
                s9 << r16
                if r16
                  if input.index(Regexp.new('[iI]'), index) == index
                    r18 = (SyntaxNode).new(input, index...(index + 1))
                    @index += 1
                  else
                    r18 = nil
                  end
                  s9 << r18
                  if r18
                    if input.index(Regexp.new('[nN]'), index) == index
                      r19 = (SyntaxNode).new(input, index...(index + 1))
                      @index += 1
                    else
                      r19 = nil
                    end
                    s9 << r19
                    if r19
                      r20 = _nt_EOWSP
                      s9 << r20
                      if r20
                        r21 = _nt_sqlRange
                        s9 << r21
                      end
                    end
                  end
                end
              end
            end
          end
        end
      end
      if s9.last
        r9 = (SyntaxNode).new(input, i9...index, s9)
        r9.extend(SqlBoolInExpression2)
        r9.extend(SqlBoolInExpression3)
      else
        self.index = i9
        r9 = nil
      end
      if r9
        r0 = r9
      else
        self.index = i0
        r0 = nil
      end
    end

    node_cache[:sqlBoolInExpression][start_index] = r0

    return r0
  end

  module SqlRange0
    def sqlLiteralsWComma
      elements[1]
    end

  end

  module SqlRange1
    def code; sqlLiteralsWComma.code; end
  end

  def _nt_sqlRange
    start_index = index
    if node_cache[:sqlRange].has_key?(index)
      cached = node_cache[:sqlRange][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    if input.index('(', index) == index
      r1 = (SyntaxNode).new(input, index...(index + 1))
      @index += 1
    else
      terminal_parse_failure('(')
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_sqlLiteralsWComma
      s0 << r2
      if r2
        if input.index(')', index) == index
          r3 = (SyntaxNode).new(input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure(')')
          r3 = nil
        end
        s0 << r3
      end
    end
    if s0.last
      r0 = (SyntaxNode).new(input, i0...index, s0)
      r0.extend(SqlRange0)
      r0.extend(SqlRange1)
    else
      self.index = i0
      r0 = nil
    end

    node_cache[:sqlRange][start_index] = r0

    return r0
  end

  module SqlLiteralsWComma0
    def sqlLiteral
      elements[0]
    end

    def sqlLiteralsWComma
      elements[4]
    end
  end

  module SqlLiteralsWComma1
  		def code
  			build {cons(this.sqlLiteral.code, this.sqlLiteralsWComma.code)}
  		end
  end

  def _nt_sqlLiteralsWComma
    start_index = index
    if node_cache[:sqlLiteralsWComma].has_key?(index)
      cached = node_cache[:sqlLiteralsWComma][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0 = index
    i1, s1 = index, []
    r2 = _nt_sqlLiteral
    s1 << r2
    if r2
      s3, i3 = [], index
      loop do
        r4 = _nt_SP
        if r4
          s3 << r4
        else
          break
        end
      end
      r3 = SyntaxNode.new(input, i3...index, s3)
      s1 << r3
      if r3
        if input.index(',', index) == index
          r5 = (SyntaxNode).new(input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure(',')
          r5 = nil
        end
        s1 << r5
        if r5
          s6, i6 = [], index
          loop do
            r7 = _nt_SP
            if r7
              s6 << r7
            else
              break
            end
          end
          r6 = SyntaxNode.new(input, i6...index, s6)
          s1 << r6
          if r6
            r8 = _nt_sqlLiteralsWComma
            s1 << r8
          end
        end
      end
    end
    if s1.last
      r1 = (SyntaxNode).new(input, i1...index, s1)
      r1.extend(SqlLiteralsWComma0)
      r1.extend(SqlLiteralsWComma1)
    else
      self.index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      r9 = _nt_sqlLiteral
      if r9
        r0 = r9
      else
        self.index = i0
        r0 = nil
      end
    end

    node_cache[:sqlLiteralsWComma][start_index] = r0

    return r0
  end

  module SqlBoolBetweenExpression0
    def sqlArithmetic
      elements[0]
    end

    def EOWSP
      elements[9]
    end

    def sqlArithmetic2
      elements[10]
    end

    def EOWSP
      elements[15]
    end

    def sqlArithmetic3
      elements[16]
    end
  end

  module SqlBoolBetweenExpression1
  		def code
  			build {sql_msg(this.sqlArithmetic.code, 'between', range(this.sqlArithmetic2.code, this.sqlArithmetic3.code))}
  		end
  end

  def _nt_sqlBoolBetweenExpression
    start_index = index
    if node_cache[:sqlBoolBetweenExpression].has_key?(index)
      cached = node_cache[:sqlBoolBetweenExpression][index]
      @index = cached.interval.end if cached
      return cached
    end
